# airmash-server

./: .dockerignore  .gitignore  CONTRIBUTERS.md  CONTRIBUTORS.md  CTF.dockerfile  Cargo.toml  Dockerfile  FFA.dockerfile  LICENSE-MIT  README.md  TODO.md  build.rs  default-config.json  dependabot.yml  docker-compose.yml  improvements.md  infinite-fire.json  rustfmt.toml  supervisor.conf
base/: Cargo.toml
base/src/: main.rs
client/: Cargo.toml
client/src/: client.rs  config.rs  error.rs  lib.rs
client/src/game/: me.rs  mob.rs  mod.rs  player.rs  world.rs
ctf/: .gitignore  Cargo.toml
ctf/src/: component.rs  config.rs  consts.rs  event.rs  gamemode.rs  lib.rs  main.rs  resource.rs  tests.rs
ctf/src/shuffle/: alternating_shuffle.rs  even_shuffle.rs  mod.rs  no_shuffle.rs  random_shuffle.rs  structs.rs
ctf/src/systems/: command.rs  config.rs  drop.rs  drop_on_death.rs  drop_on_despawn.rs  drop_on_respawn.rs  drop_on_spec.rs  drop_on_stealth.rs  flag_message.rs  flagspeed.rs  handle_leave.rs  leaveupdate.rs  loginupdate.rs  mod.rs  on_flag_event.rs  on_frame.rs  on_game_end.rs  on_game_start.rs  on_player_join.rs  on_player_leave.rs  on_player_respawn.rs  pickupflag.rs  pos_update.rs  register.rs  return_flag.rs  score_detailed.rs  sendmessage.rs
ctf/src/tasks/: mod.rs  new_game.rs
ctf/tests/: game-score-reset.rs
ctf/tests/behaviour/: flags.rs
ffa/: Cargo.toml
ffa/src/: components.rs  gamemode.rs  main.rs  systems.rs  tests.rs  upgrades.rs
ffa/src/systems/: add_damage.rs  mod.rs  register.rs  send_score_detailed.rs  track_damage.rs
protocol-common/: Cargo.toml  rustfmt.toml
protocol-common/src/: client_packet.rs  detail.rs  error.rs  lib.rs  server_packet.rs  traits.rs
protocol-common/src/consts/: flags.rs
protocol-common/src/enums/: command_reply_type.rs  error_type.rs  firewall_status.rs  firewall_update_type.rs  flag_code.rs  flag_update_type.rs  game_type.rs  key_code.rs  leave_horizon_type.rs  mob_type.rs  mod.rs  plane_type.rs  player_level_type.rs  player_status.rs  powerup_type.rs  server_custom_type.rs  server_message_type.rs  upgrade_type.rs
protocol-common/src/types/: flag.rs  level.rs  mob.rs  mod.rs  player.rs  score.rs  server_key_state.rs  team.rs  upgrades.rs  vector2.rs
protocol/common/: Cargo.toml  README.md
protocol/common/src/: client_packet.rs  detail.rs  error.rs  lib.rs  server_packet.rs  traits.rs
protocol/v5/: Cargo.toml  README.md
protocol/v5/src/: client.rs  error.rs  lib.rs  macros.rs  protocol.rs  server.rs
server/: Cargo.toml  airmash.prtcl  build.rs
server-config/: Cargo.toml
server-config/configs/: infinite-fire.lua
server-config/examples/: export.rs  validate.rs
server-config/src/: common.rs  config.rs  effect.rs  error.rs  game.rs  lib.rs  missile.rs  mob.rs  plane.rs  powerup.rs  script.rs  special.rs  util.rs
server-config/tests/: validate.rs
server-macros/: Cargo.toml
server-macros/src/: args.rs  event_deps.rs  event_handler.rs  handler.rs  lib.rs  macro_args.rs  system.rs  systemdata.rs
server-next/: Cargo.toml
server-next/examples/: validate-config.rs
server-next/src/: defaults.rs  dispatch.rs  lib.rs  macros.rs  mock.rs  network.rs  task.rs  util.rs  world.rs  worldext.rs
server-next/src/component/: keystate.rs  mod.rs
server-next/src/consts/: hitcircles.rs  mod.rs  terrain.rs
server-next/src/event/: collision.rs  missile.rs  mob.rs  mod.rs  packet.rs  player.rs
server-next/src/resource/: collision.rs  config.rs  game_config.rs  mod.rs  stats.rs  tasks.rs
server-next/src/system/: admin.rs  collision.rs  ctf.rs  despawn.rs  energy.rs  ffa.rs  keys.rs  mod.rs  network.rs  physics.rs  ping.rs  powerups.rs  regen.rs  scoreboard.rs  specials.rs  visibility.rs
server-next/src/util/: escapes.rs  mod.rs  spectate.rs
server-next/tests/: all_tests.rs
server-next/tests/behaviour/: admin.rs  mod.rs  powerups.rs  prowler.rs  upgrades.rs  visibility.rs
server-next/tests/utils/: mod.rs
server-prototypes/: Cargo.toml
server-prototypes/examples/: export.rs  validate.rs
server-prototypes/src/: config.rs  error.rs  game.rs  lib.rs  missile.rs  plane.rs  script.rs  special.rs  util.rs
server-prototypes/src/util/: mod.rs  seq.rs  tag.rs
server-tests/: Cargo.toml
server-tests/src/: lib.rs  logger.rs
server-tests/tests/: tests.rs
server-v2/: Cargo.toml
server-v2/src/: lib.rs  macros.rs
server-v2/src/component/: channel.rs  collision.rs  counter.rs  flag.rs  keystate.rs  mod.rs  powerup.rs  protocol.rs  time.rs
server-v2/src/data/: hit_circles.rs  mod.rs  terrain.rs
server-v2/src/ecs/: anymap.rs  anyvec.rs  dispatch.rs  error.rs  join.rs  mod.rs  system.rs  tests.rs  vtable.rs  world.rs
server-v2/src/event/: collision.rs  event.rs  mod.rs
server-v2/src/resource/: builtin.rs  collision.rs  config.rs  connections.rs  event.rs  mod.rs  packet.rs  socket.rs
server-v2/src/server/: config.rs  mod.rs  websocket.rs
server-v2/src/sysdata/: clock.rs  connections.rs  fire_missiles.rs  is_alive.rs  mod.rs  task_spawner.rs
server-v2/src/system/: builtin.rs  energy_regen.rs  mod.rs  player_update.rs  position_update.rs
server-v2/src/util/: gamemode.rs  kdtree.rs  maybe_init.rs  mod.rs  rcbuf.rs  to_clock.rs
server-v2/tests/: segfault.rs  server_shutdown.rs
server-v2/tests/segfaults/: world_segfault_on_iter.rs
server/benches/: collision.rs
server/examples/: export-config.rs  validate-config.rs
server/src/: builder.rs  defaults.rs  dispatch.rs  lib.rs  macros.rs  main.rs  mock.rs  network.rs  runner.rs  server.rs  task.rs  timeloop.rs  timers.rs  world.rs  worldext.rs
server/src/component/: channel.rs  collection.rs  collision.rs  counter.rs  ctf.rs  effect.rs  event.rs  flag.rs  keystate.rs  missile.rs  mod.rs  packet_event.rs  ratelimit.rs  reference.rs  stats.rs  time.rs
server/src/consts/: atomic.rs  hitcircles.rs  missile.rs  mod.rs  throttling.rs  timer.rs
server/src/dispatch/: builder.rs  mod.rs  sysbuilder.rs  sysinfo.rs  sysparent.rs  syswrapper.rs
server/src/event/: collision.rs  mod.rs  (+3 more)
server/tests/: all_tests.rs  task.rs  test-no-loops.rs
(+841 files in other folders)
