
[profile.release]
# Turn on nice backtraces even when in release mode
debug = true
#lto = true

[patch.crates-io]
airmash-protocol = { git = "https://github.com/steamroller-airmash/airmash-protocol-rs" }
airmash-protocol-v5 = { git = "https://github.com/steamroller-airmash/airmash-protocol-v5" }

[workspace]
members = [
	"client",
	"server",
	"base",
	"ctf",
	"ffa",
	"bounded-queue",
	"special-map",
	"server-macros",
	"server-tests",
	"server-v2",
	"server-v2-macros",
	"protocol/common",
	"protocol/v5"
]
