
cargo-features = ["named-profiles"]

[profile.release]
# Turn on nice backtraces even when in release mode
debug = true

[profile.publish]
inherits = "release"
debug = true
lto = "thin"
codegen-units = 1

[workspace]
members = [
	# "server",
	"base",
	"ctf",
	"ffa",
	"server-next",
	"server-macros",
	"utils/bounded-queue",
	"utils/special-map",
	"utils/kdtree"
]
