[package]
name = "airmash-server-base"
version = "0.0.1"
authors = ["STEAMROLLER"]
license = "Apache-2.0 OR MIT"
description = "Minimal airmash server game mode"
publish = false
repository = 'https://github.com/steamroller-airmash/airmash-server'


[dependencies]
specs = { version = "0.14.3", features = ["nightly"] }
airmash-server = { path='../server' }
log = "*"
env_logger = "*"
clap = "*"
serde_json = "*" 
