[package]
name = "airmash-server-base"
version = "0.0.1"
authors = ["STEAMROLLER"]
license = "Apache-2.0 OR MIT"
description = "Minimal airmash server game mode"
publish = false
repository = 'https://github.com/steamroller-airmash/airmash-server'
edition = "2018"

[dependencies]
airmash-server = { path='../server-next' }
log = "0.4"
env_logger = "0.8"
clap = "2.33"
serde_json = "1.0" 
