[package]
name = "airmash-server-base"
version = "0.0.1"
authors = ["STEAMROLLER"]
license = "Apache-2.0 OR MIT"
description = "Minimal airmash server game mode"
publish = false
repository = 'https://github.com/steamroller-airmash/airmash-server'
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.9"
clap = "3.2.16"
airmash = { path="../server", features = ["mt-network"] }
