[package]
name = "airmash-server-ctf"
version = "0.0.1"
authors = ["STEAMROLLER"]
license = "Apache-2.0 OR MIT"
publish = false
repository = 'https://github.com/steamroller-airmash/airmash-server'
edition = "2018"


[dependencies]
log = "0.4"
env_logger = "0.9"
clap = "3.2.6"
serde_json = "1.0"
serde-deserialize-over = "0.1.0"
htmlescape = "0.3"
rand = "0.8"
bstr = "0.2"

lazy_static = "1.4"
smallvec = "1.6"

[dependencies.airmash]
path="../server"
package = "airmash-server"
features = ["mt-network"]
