[package]
name = "airmash-server-ctf"
version = "0.0.1"
authors = ["STEAMROLLER"]
license = "Apache-2.0 OR MIT"
publish = false
repository = 'https://github.com/steamroller-airmash/airmash-server'
edition = "2018"


[dependencies]
log = "0.4"
env_logger = "0.10"
clap = "4.4.1"
htmlescape = "0.3"
rand = "0.8"
bstr = "0.2"

lazy_static = "1.4"
smallvec = "1.11"
airmash = { path="../server", features = ["mt-network"] }

