[package]
name = "airmash-server-ffa"
version = "0.0.1"
authors = ["STEAMROLLER"]
license = "Apache-2.0 OR MIT"
description = "Airmash CTF game mode"
publish = false
repository = 'https://github.com/steamroller-airmash/airmash-server'
edition = "2018"

[dependencies]
server = { path="../server-next", package="airmash-server" }
log = "0.4"
env_logger = "0.9"
rand = "0.8"
clap = "2.33"
serde = "1.0"
serde-deserialize-over = { git="https://github.com/steamroller-airmash/serde-deserialize-over" }
serde_json = "1.0"

# When specs updates to shred 0.8.0 this will need to be updated as well
# shred = "0.7"
# shred-derive = "0.5"
# specs = { version = "0.14.3", features = ["nightly"] }
# specs-derive = "*"
# airmash-server = { path='../server' }
# log = "*"
# env_logger = "*"
# rand = "0.4"
# lazy_static = "*"
# clap = "*"
# serde = "1.0"
# serde-deserialize-over = { git="https://github.com/steamroller-airmash/serde-deserialize-over" }
# serde_json = "*"

# [dependencies.sentry]
# optional = true
# version = "*"
