[package]
name = "airmash-server-ffa"
version = "0.0.1"
authors = ["STEAMROLLER"]
license = "Apache-2.0 OR MIT"
description = "Airmash CTF game mode"
publish = false
repository = 'https://github.com/steamroller-airmash/airmash-server'
edition = "2018"

[dependencies]
server = { path="../server", package="airmash-server" }
log = "0.4"
env_logger = "0.9"
rand = "0.8"
clap = "3.1.2"
serde = "1.0"
serde-deserialize-over = "0.1.0"
serde_json = "1.0"
color-backtrace = "0.5"
