[package]
name = "protocol-common"
version = "0.0.1"
authors = ["STEAMROLLER"]
publish = false

[features]

[dependencies]
lazy_static = "*"
fnv = "*"
dimensioned = "*"
#num_traits = "*"
#enum_from_primitive = "*"

[dependencies.specs]
version = "*"
optional = true

[dependencies.serde]
version = "*"
features = ["derive"]
optional = true
