[package]
name = "server-config"
version = "0.1.0"
edition = "2021"

[features]
script = [ "rlua", "serde-rlua" ]
default = [ "script" ]

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
ultraviolet = { version = "0.9", features = ["serde", "mint"] }

rlua = { version = "0.19", optional = true }
serde-rlua = { path = "../utils/serde-rlua", optional = true }

[dependencies.protocol]
version = "0.6.2"
package = "airmash-protocol"
features = [ "serde" ]

[dev-dependencies]
serde_json = "1.0"
serde_path_to_error = "0.1.10"
anyhow = "1.0"

[[example]]
name = "export"
required-features = ["script"]

[[example]]
name = "validate"
required-features = ["script"]
