[package]
name = "airmash-server-macros"
version = "0.1.0"
authors = ["steamroller-airmash <38710707+steamroller-airmash@users.noreply.github.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version="1.0", features=[ "full", "extra-traits" ] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "0.1"
fxhash = "0.2"
