[package]
name = "server-next"
version = "0.1.0"
edition = "2018"

[dependencies]
hecs = "0.5"
nalgebra = "0.27.1"
shrev = "1.1"
anymap = "0.12"
linkme = "0.2.6"
log = "0.4"
crossbeam-channel = "0.5"

tokio = { version="1.0", features=["rt", "sync", "io-util", "macros", "time"] }
tokio-tungstenite = "0.14"
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde-deserialize-over = { git="https://github.com/steamroller-airmash/serde-deserialize-over" }

server-macros = { path="../server-macros" }
kdtree = { path="../utils/kdtree" }

[dependencies.airmash-protocol]
git = "https://github.com/steamroller-airmash/airmash-protocol-rs"
branch = "remove-dimensioned"
features = [ "serde" ]
