[package]
name = "server-prototypes"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde-value = "0.7"
nalgebra = { version = "0.31", features = ["serde-serialize"] }

[dependencies.protocol]
version = "0.5"
package = "airmash-protocol"
features = [ "serde" ]

[dev-dependencies]
serde_json = "1.0"
