[package]
name = "server-v2"
version = "0.1.0"
authors = ["STEAMROLLER"]
edition = "2018"

[dependencies]
hibitset = { version="0.6", default-features=false }
http = "0.1"
log = "0.4"
petgraph = "0.4"
thiserror = "1.0"
fxhash = "0.2"
rand = { version="0.7", default-features=false }
uuid = { version="0.8", default-features=false, features=["v4"] }

shrev = { git="https://github.com/steamroller-airmash/shrev-rs" }
airmash-protocol = { path="../protocol/common" }
airmash-protocol-v5 = { path="../protocol/v5" }
server-v2-macros = { path="../server-v2-macros" }

[dependencies.tokio-tungstenite]
git = "https://github.com/dbcfd/tokio-tungstenite"
branch = "tokio2"

[dependencies.tokio]
version = "0.2.4"
features = [ "rt-util", "rt-core", "time", "tcp", "io-util", "sync" ]

[dependencies.futures]
version = "0.3"
default-features = false
features = [ "std", "async-await" ]
