[package]
name = "airmash-server"
version = "0.1.0"
edition = "2018"

[features]
mt-network = []

[dependencies]
hecs = "0.7.6"
nalgebra = { version = "0.31.0", features = ["serde-serialize"] }
anymap = "=1.0.0-beta.2"
linkme = "0.2.6"
log = "0.4"
crossbeam-channel = "0.5"
bstr = "0.2"
rand = "0.8"
uuid = { version = "1.1", features = ["v4"] }
smallvec = "1.6"
itertools = "0.10"
slab = "0.4"
fxhash = "0.2"
httparse = "1.6.0"

tokio = { version="1.0", features=["rt", "sync", "io-util", "macros", "time", "rt-multi-thread"] }
tokio-tungstenite = "0.17.1"

serde = { version = "1.0", features = ["derive"] }
serde-deserialize-over = "0.1.1"

airmash-protocol = { version = "0.5.0", features = ["serde"] }
server-macros = { path="../server-macros" }
server-config = { path="../server-config" }
kdtree = { path="../utils/kdtree" }

[dev-dependencies]
approx = "0.5"
serde_json = "1.0"
serde_path_to_error = "0.1"
miette = { version = "4.7", features = [ "fancy" ] }
thiserror = "1.0"

[dependencies.futures-util]
version = "0.3"
default-features = false
features = [ "sink" ]

[dependencies.futures-task]
version = "0.3"
default-features = false
