[package]
name = "airmash"
version = "0.1.0"
edition = "2018"

[features]
mt-network = []

[dependencies]
hecs = "0.10.0"
linkme = "0.3.9"
log = "0.4"
crossbeam-channel = "0.5"
bstr = "0.2"
rand = "0.8"
uuid = { version = "1.3", features = ["v4"] }
smallvec = "1.10"
itertools = "0.10"
slab = "0.4"
httparse = "1.8.0"
humantime = "2.1.0"
mint = "0.5"
ultraviolet = { version = "0.9", features = ["serde", "mint"] }

tokio = { version="1.26", features=["rt", "sync", "io-util", "macros", "time", "rt-multi-thread"] }
tokio-tungstenite = "0.18.0"

serde = { version = "1.0", features = ["derive"] }

airmash-protocol = { version = "0.6.2", features = ["serde"] }
server-macros = { path="../server-macros" }
server-config = { path="../server-config" }
kdtree = { path="../utils/kdtree" }
anymap = { path="../utils/anymap" }

[dev-dependencies]
approx = "0.5"

[dependencies.futures-util]
version = "0.3"
default-features = false
features = [ "sink" ]

[dependencies.futures-task]
version = "0.3"
default-features = false
