[package]
name = "airmash-protocol"
version = "0.3.0"
authors = ["STEAMROLLER"]
readme = "README.md"
description = "Protocol library for airma.sh"
repository = "https://github.com/steamroller-airmash/airmash-protocol-rs"
keywords = ["protocol", "games"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[badges]
circle-ci = { repository = "steamroller-airmash/airmash-protocol-rs" }
maintenance = { status = "experimental" }

[features]
serde = [ "serde-feature-hack", "serde_json" ]
default = ["custom_data"]
custom_data = ["serde"]

[dependencies]
lazy_static = "1.0"
fnv = "1.0"
dimensioned = "0.7"
specs-derive = "0.4"
derive_more = "0.15"
enum-primitive-derive = "0.1"
num-traits = "0.2"

[dependencies.specs]
version = "0.15"
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.serde-feature-hack]
version = "0.2"
features = ["derive"]
optional = true
